Fix doc generation workflow (#1)
Co-authored-by: an.tsouchlos <an.tsouchlos@users.noreply.github.com>
Reviewed-on: https://git.mercurial-manifold.eu/an.tsouchlos/hyperlink-hw/pulls/1
Co-authored-by: Andreas Tsouchlos <an.tsouchlos@gmail.com>
Co-committed-by: Andreas Tsouchlos <an.tsouchlos@gmail.com>

--- a/.gitea/workflows/doc-generation.yml
+++ b/.gitea/workflows/doc-generation.yml
@@ -2,9 +2,10 @@ name: docs-generation
 
 on:
   pull_request:
-    # paths:
-    #   - '**.sch'
-    #   - '**.kicad_pcb'
+    paths:
+      - '**.kicad_sch'
+      - '**.kicad_pcb'
+      - '**.kicad_pro'
 
 jobs:
   docs-generation:
